[gd_scene load_steps=21 format=3 uid="uid://bnkdd23vjfrgh"]

[ext_resource type="PackedScene" uid="uid://dpvq0mulg6flc" path="res://player.tscn" id="1_q2p5f"]
[ext_resource type="Script" path="res://floor.gd" id="3_onm7i"]
[ext_resource type="Script" path="res://navigation_region_3d.gd" id="3_qruca"]
[ext_resource type="Script" path="res://navigation_agent_3d.gd" id="4_1irrk"]
[ext_resource type="Script" path="res://walls_generator.gd" id="4_56k1n"]
[ext_resource type="Script" path="res://walls.gd" id="4_ldya3"]
[ext_resource type="Script" path="res://gui.gd" id="5_5tsee"]
[ext_resource type="Script" path="res://camera_3d.gd" id="6_1n7uy"]
[ext_resource type="Script" path="res://health_bar.gd" id="9_3deyo"]
[ext_resource type="Script" path="res://attack.gd" id="9_rh0m4"]
[ext_resource type="Script" path="res://enemies.gd" id="10_ctjso"]
[ext_resource type="Script" path="res://button.gd" id="10_ogdme"]
[ext_resource type="Script" path="res://exit.gd" id="11_mu154"]

[sub_resource type="NavigationMesh" id="NavigationMesh_i8ovu"]
vertices = PackedVector3Array(-23.4, 1, -23.4, -23.4, 1, 23.4, 23.4, 1, 23.4, 23.4, 1, -23.4)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_size = 0.1
vertices_per_polygon = 4.0
filter_ledge_spans = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vyjl6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cd0m1"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbr2j"]
bg_color = Color(0.894118, 0.196078, 0, 1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_2jtmb"]
sky_curve = 0.227357
sky_energy_multiplier = 1.79

[sub_resource type="Sky" id="Sky_a1ynx"]
sky_material = SubResource("ProceduralSkyMaterial_2jtmb")
radiance_size = 1

[sub_resource type="Environment" id="Environment_2jh48"]
background_mode = 2
sky = SubResource("Sky_a1ynx")

[node name="main" type="Node3D"]

[node name="NAV" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_i8ovu")
script = ExtResource("3_qruca")

[node name="floor" type="CSGBox3D" parent="NAV"]
process_priority = -1
use_collision = true
size = Vector3(48, 1, 48)
script = ExtResource("3_onm7i")

[node name="player" parent="." instance=ExtResource("1_q2p5f")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="player"]
path_max_distance = 10000.0
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = true
script = ExtResource("4_1irrk")

[node name="light" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0)
shadow_enabled = true
directional_shadow_mode = 0

[node name="walls_generator_index" type="Node3D" parent="."]
script = ExtResource("4_56k1n")

[node name="Timer" type="Timer" parent="walls_generator_index"]
wait_time = 0.05
one_shot = true

[node name="walls_positions" type="Node3D" parent="."]
process_priority = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, -24)
script = ExtResource("4_ldya3")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 24.9671, 0)
fov = 90.0
script = ExtResource("6_1n7uy")

[node name="GUI" type="Control" parent="Camera3D"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)
script = ExtResource("5_5tsee")

[node name="ColorRect" type="ColorRect" parent="Camera3D/GUI"]
layout_mode = 0
offset_right = 383.0
offset_bottom = 113.0
color = Color(0, 0, 0, 1)

[node name="score" type="RichTextLabel" parent="Camera3D/GUI"]
layout_mode = 0
offset_left = -1.99999
offset_top = -21.0
offset_right = 197.0
offset_bottom = 19.0
scale = Vector2(5, 5)
bbcode_enabled = true
text = "punti: 10"

[node name="health_2" type="ProgressBar" parent="Camera3D/GUI"]
layout_mode = 0
offset_left = 1866.0
offset_top = 2.0
offset_right = 2302.0
offset_bottom = 112.0
theme_override_styles/background = SubResource("StyleBoxFlat_vyjl6")
theme_override_styles/fill = SubResource("StyleBoxFlat_cd0m1")
value = 70.0
show_percentage = false

[node name="health" type="ProgressBar" parent="Camera3D/GUI"]
layout_mode = 0
offset_left = 1866.0
offset_top = 2.0
offset_right = 2302.0
offset_bottom = 112.0
theme_override_styles/fill = SubResource("StyleBoxFlat_tbr2j")
value = 30.0
show_percentage = false
script = ExtResource("9_3deyo")

[node name="Timer" type="Timer" parent="Camera3D/GUI"]
one_shot = true

[node name="death" type="Control" parent="Camera3D"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Camera3D/death"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.129412, 0.180392, 1)

[node name="retry" type="Button" parent="Camera3D/death"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -27.0
offset_right = 129.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
text = "RIPROVA"
script = ExtResource("10_ogdme")

[node name="exit" type="Button" parent="Camera3D/death"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = 157.0
offset_right = 129.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2
text = "esci"
script = ExtResource("11_mu154")

[node name="RichTextLabel" type="RichTextLabel" parent="Camera3D/death"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -364.0
offset_right = 364.0
offset_bottom = 245.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 150
text = "sei morto"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_2jh48")

[node name="projectile" type="Node3D" parent="."]
script = ExtResource("9_rh0m4")

[node name="enemies_generator" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.99186, 0)
script = ExtResource("10_ctjso")

[connection signal="timeout" from="walls_generator_index/Timer" to="walls_generator_index" method="_on_timer_timeout"]
[connection signal="timeout" from="Camera3D/GUI/Timer" to="Camera3D/GUI/health" method="_on_timer_timeout"]
